# proyecto-final-battleship-proyecto2_battleship

./: BattleShip.out  ComputerGame.cpp  ComputerGame.h  Game.cpp  Game.h  In.txt  README.md  Ship.cpp  Ship.h  attack.out  aux.h  auxFunctions.h  auxx.h  casilla.cpp  casilla.h  driver.h  funcionesAux.h  functions.cpp  functions.h  handshake.out  interface.h  main.cpp  placeFleet.out  placeFleet1.out  placeFleet2.out  presentacionBattleship.pptx  set_ship.out
battleShip Manual/: CMakeLists.txt  ComputerGame.cpp  ComputerGame.h  Game.cpp  Game.h  attack.out  auxx.h  driver.h  handshake.out  placeFleet.out  placeFleet1.out  placeFleet2.out
