cmake_minimum_required(VERSION 3.13)
project(proyecto_final_battleship_proyecto2_battleship_0d3f4ec49b5d95282743751f40e8c30b1c54a835)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(proyecto_final_battleship_proyecto2_battleship_0d3f4ec49b5d95282743751f40e8c30b1c54a835
        casilla.h
        ComputerGame.cpp
        ComputerGame.h
        Game.cpp
        Game.h
        main.cpp
        Ship.cpp
        Ship.h)
